# gramps-api-client

./: LICENSE  README.md  pyproject.toml
gramps_api_client/: __init__.py  api.py  client.py
